// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should generate the default markup 1`] = `
<div class="checkbox-group">
  <div class="checkbox">
    <input id="checkbox-1-1" name="checkbox-group" value="Checkbox 1" type="checkbox" checked="">
    <label for="checkbox-1-1">Option 1</label>
  </div>
  <div class="checkbox">
    <input id="checkbox-1-2" name="checkbox-group" value="Checkbox 2" type="checkbox">
    <label for="checkbox-1-2">Option 2</label>
  </div>
  <div class="checkbox">
    <input id="checkbox-1-3" name="checkbox-group" value="Checkbox 3" type="checkbox">
    <label for="checkbox-1-3">Option 3</label>
  </div>
</div>
`;

exports[`CheckboxGroup should render with inline style 1`] = `
<div class="checkbox-group checkbox-group-inline">
  <div class="checkbox">
    <input id="checkbox-1-1" name="checkbox-group" value="Checkbox 1" type="checkbox" checked="">
    <label for="checkbox-1-1">Option 1</label>
  </div>
  <div class="checkbox">
    <input id="checkbox-1-2" name="checkbox-group" value="Checkbox 2" type="checkbox">
    <label for="checkbox-1-2">Option 2</label>
  </div>
  <div class="checkbox">
    <input id="checkbox-1-3" name="checkbox-group" value="Checkbox 3" type="checkbox">
    <label for="checkbox-1-3">Option 3</label>
  </div>
</div>
`;
